[gd_scene load_steps=3 format=3 uid="uid://cxlkclvgg1kcb"]

[ext_resource type="Script" uid="uid://0j5q6ux2cjie" path="res://scripts/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="FontFile" uid="uid://dth2pukglue6d" path="res://assets/fonts/PixelOperator8.ttf" id="1_6tw0m"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0lmf7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="MenuContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausedLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6tw0m")
theme_override_font_sizes/font_size = 128
text = "Paused"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6tw0m")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Control2" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TitleButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6tw0m")
theme_override_font_sizes/font_size = 32
text = "Back to Title Screen"

[node name="Control3" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6tw0m")
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
